...
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wtS-NO-Xth">
                                        <rect key="frame" x="0.0" y="0.0" width="382" height="62.5"/>
                                        <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="52"/>
                                        <nil key="textColor"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="operatorPlus"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="+"/>
...
                                                <rect key="frame" x="97.5" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberOne"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="1"/>
...
                                                <rect key="frame" x="195" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberTwo"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="2"/>
...
                                                <rect key="frame" x="292.5" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberThree"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="3"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="operatorMinus"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="-"/>
...
                                                <rect key="frame" x="97.5" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberFour"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="4"/>
...
                                                <rect key="frame" x="195" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberFive"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="5"/>
...
                                                <rect key="frame" x="292.5" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberSix"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="6"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="operatorMultiply"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="*"/>
...
                                                <rect key="frame" x="97.5" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberSeven"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="7"/>
...
                                                <rect key="frame" x="195" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberEight"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="8"/>
...
                                                <rect key="frame" x="292.5" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="numberNine"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="9"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="89.5" height="51"/>
                                                <color key="backgroundColor" systemColor="systemGray5Color"/>
                                                <accessibility key="accessibilityConfiguration" identifier="operatorDivide"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                                <state key="normal" title="/"/>
...
                                                <rect key="frame" x="97.5" y="0.0" width="89.5" height="51"/>
